--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -6,21 +6,21 @@ Description: Responsive Education HTML5 Template
 -----------------------------------------------------------------------------------
  CSS INDEX===================
     ##== Default Css
-    1. Home One
-    1.1 Header Top
-    1.2 Header Bottom
-    1.3 Slider Area
-    1.4 About Area
-    1.5 Course Area
-    1.6 Take Toure Area
-    1.7 Teacher Area
-    1.8 Event Area
-    1.9 Testimonial Area
-    1.10 Feature Blog
-    1.11 Call to Action
-    1.12 Footer Area
-    2. Home Two
-    3. Home Three
+    1. Home One 
+    1.1 Header Top 
+    1.2 Header Bottom 
+    1.3 Slider Area 
+    1.4 About Area 
+    1.5 Course Area 
+    1.6 Take Toure Area 
+    1.7 Teacher Area 
+    1.8 Event Area 
+    1.9 Testimonial Area 
+    1.10 Feature Blog 
+    1.11 Call to Action 
+    1.12 Footer Area 
+    2. Home Two 
+    3. Home Three 
     4. Courses
     5. Courses Details
     6. Teacher Details
@@ -117,20 +117,20 @@ a {
 }
 a:focus,
 a:hover {
-  color: #A20B0B !important;
+  color: #cd2122 !important;
 }
 *::-moz-selection {
-  background: #A20B0B;
+  background: #cd2122;
   color: #fff;
   text-shadow: none;
 }
 ::-moz-selection {
-  background: #A20B0B;
+  background: #cd2122;
   color: #fff;
   text-shadow: none;
 }
 ::selection {
-  background: #A20B0B;
+  background: #cd2122;
   color: #fff;
   text-shadow: none;
 }
@@ -152,15 +152,15 @@ a:hover {
   padding: 12px 20px;
 }
 .btn-primary {
-  background: #A20B0B !important;
+  background: #cd2122 !important;
   color: #ffffff;
-  border: 1px solid #A20B0B !important;
+  border: 1px solid #cd2122 !important;
 }
 .btn-primary:focus,
 .btn-primary:hover {
   background-color: #ffffff !important;
-  color:#A20B0B !important;
-  border-color: #A20B0B !important;
+  color: #cd2122 !important;
+  border-color: #cd2122 !important;
 }
 .btn-light {
   background-color: #ffffff !important;
@@ -169,15 +169,15 @@ a:hover {
 }
 .btn-light:focus,
 .btn-light:hover {
-  background-color: #A20B0B !important;
+  background-color: #cd2122 !important;
   color: #ffffff !important;
-  border-color: #A20B0B !important;
+  border-color: #cd2122 !important;
 }
 .btn-round {
   border-radius: 50px;
 }
 .primary-bg {
-  background-color: #A20B0B;
+  background-color: #cd2122;
 }
 
 /*============================================
@@ -189,7 +189,7 @@ a:hover {
 }
 
 .header-top {
-  background-color: #A20B0B;
+  background-color: #cd2122;
   padding: 10px 0;
 }
 
@@ -239,6 +239,11 @@ a:hover {
   transition: all 0.3s ease 0s;
 }
 
+.sticky-header {
+  position: fixed;
+  top: 0;
+  background: #222;
+}
 
 .header-bottom-inner {
   border-bottom: 1px solid rgba(255, 255, 255, 0.09);
@@ -247,8 +252,9 @@ a:hover {
   transition: all 0.3s ease 0s;
 }
 
-
-
+.sticky-header .header-bottom-inner {
+  border-color: #222;
+}
 
 .logo a {
   display: inline-block;
@@ -272,11 +278,13 @@ a:hover {
   padding: 43px 17px;
 }
 
-
+.sticky-header .main-menu nav > ul > li > a {
+  padding: 38px 17px;
+}
 
 .main-menu nav ul li > a:hover,
 .main-menu nav ul li.active > a {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 /*submenu*/
@@ -458,7 +466,7 @@ a:hover {
   height: 100vh;
   width: 100%;
   cursor: pointer;
-  background-color: #A20B0B;
+  background-color: #cd2122;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: all 0.3s ease 0s;
@@ -502,7 +510,7 @@ a:hover {
   content: "";
   height: 2px;
   width: 50px;
-  background: #A20B0B;
+  background: #cd2122;
   position: absolute;
   left: 0;
   top: 12px;
@@ -518,11 +526,11 @@ a:hover {
   display: block;
 }
 .primary-color {
-  color: #A20B0B !important;
+  color: #cd2122 !important;
 }
 
 .text-color {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 .slider-content p {
@@ -643,7 +651,7 @@ a.expand-video {
   margin: auto;
   height: 78px;
   width: 78px;
-  background: #A20B0B;
+  background: #cd2122;
   text-align: center;
   line-height: 78px;
   border-radius: 50%;
@@ -657,7 +665,7 @@ a.expand-video i {
 a.expand-video:focus,
 a.expand-video:hover {
   background-color: #fff;
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 /*============================================
@@ -683,14 +691,14 @@ a.expand-video:hover {
   top: 23px;
   color: #fff;
   padding: 6px 12px;
-  background:#A20B0B;
+  background: #cd2122;
 }
 .cs-price:before {
   content: "";
   position: absolute;
   right: 0;
   top: -9px;
-  border-left: 10px solid #A20B0B;
+  border-left: 10px solid #cd2122;
   border-top: 9px solid transparent;
 }
 .course-meta-title {
@@ -711,7 +719,7 @@ a.expand-video:hover {
   margin-bottom: 10px;
 }
 .course-meta-text h4 a:hover {
-  color: #A20B0B;
+  color: #cd2122;
 }
 ul.course-meta-stats {
 }
@@ -724,7 +732,7 @@ ul.course-meta-stats li:last-child {
   margin-right: 0;
 }
 ul.course-meta-stats li i {
-  color: #A20B0B;
+  color: #cd2122;
 }
 .course-meta-thumbnail {
   height: auto;
@@ -786,7 +794,7 @@ ul.course-meta-stats li i {
 .blog-carousel .owl-nav div:hover,
 .course-carousel .owl-nav div:hover,
 .teacher-carousel .owl-nav div:hover {
-  background: #A20B0B;
+  background: #cd2122;
 }
 
 /*============================================
@@ -951,7 +959,7 @@ img.title-top-shape {
   margin-bottom: 0;
 }
 .media-body p i {
-  color: #A20B0B;
+  color: #cd2122;
   margin-right: 8px;
 }
 /*============================================
@@ -983,7 +991,7 @@ img.tst-bg {
   margin-bottom: 35px;
 }
 .testimonial-content h4 {
-  font-weight: 400;
+  font-weight: 300;
   color: #ffffff;
 }
 .testimonial-content > span {
@@ -1070,7 +1078,7 @@ img.tst-bg {
 }
 .address h6 {
   font-weight: 400;
-  color: #A20B0B;
+  color: #cd2122;
   text-transform: capitalize;
   margin-bottom: 5px;
 }
@@ -1087,7 +1095,7 @@ img.tst-bg {
   margin-right: 10px;
 }
 .widget-company .social li a:hover {
-  color: #A20B0B;
+  color: #cd2122;
 }
 .fwidget-title {
   position: relative;
@@ -1118,7 +1126,7 @@ span.post-date {
 }
 
 span.post-date i {
-  color: #A20B0B;
+  color: #ff9c02;
   margin-right: 5px;
 }
 .widget-opening ul li {
@@ -1152,7 +1160,7 @@ span.post-date i {
 .footer-link li i {
   font-size: 14px;
   margin-right: 12px;
-  color: #A20B0B;
+  color: #cd2122;
 }
 .footer-link li {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
@@ -1176,17 +1184,9 @@ span.post-date i {
   top: 0;
   z-index: 9998;
   width: 100%;
-  background: #fff;}
+  background: #fff;
+}
 
-  .sticky-header-two{
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 9998;
-    width: 100%;
-    background: #FDFDFD;
-
-  }
 .menu-style2 {
   text-align: center;
 }
@@ -1204,7 +1204,7 @@ span.post-date i {
   top: calc(50% - 1px);
   height: 2px;
   width: 10px;
-  background: #A20B0B;
+  background: #cd2122;
   opacity: 0;
   transition: all 0.3s ease 0s;
 }
@@ -1247,8 +1247,9 @@ span.post-date i {
   border: 1px solid #ccc !important;
 }
 .header-bottom-right-style-2 li a.btn-light:hover {
-  border-color: #A20B0B !important;
+  border-color: #cd2122 !important;
 }
+
 
 .header-bottom-right-style-2 li a:hover,
 .header-bottom-right-style-2 li a.active {
@@ -1261,7 +1262,7 @@ span.post-date i {
 /*hero area*/
 
 .hero-area {
-  margin-top: 150px;
+  margin-top: 104px;
   position: relative;
   z-index: 1;
   padding: 170px 0;
@@ -1359,7 +1360,7 @@ span.post-date i {
 }
 
 .hero-content form strong a:hover {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 /*about-area-style2*/
@@ -1397,8 +1398,6 @@ span.post-date i {
 .section-title-style2 span:before,
 .section-title-style2 span:after {
   content: "";
-  background: url(../images/icon/s2-title-left-shape.png) center/contain
-    no-repeat;
   position: absolute;
   left: -78px;
   top: -40px;
@@ -1409,8 +1408,7 @@ span.post-date i {
 .section-title-style2 span:after {
   left: auto;
   right: -78px;
-  background: url(../images/icon/s2-title-right-shape.png) center/contain
-    no-repeat;
+
 }
 .section-title-style2 h2 {
   font-size: 54px;
@@ -1467,7 +1465,7 @@ span.post-date i {
 
 .tst-carousel .owl-dots .active,
 .commn-carousel .owl-dots .active {
-  background: #A20B0B;
+  background: #cd2122;
 }
 
 /*============================================
@@ -1505,7 +1503,7 @@ span.post-date i {
   bottom: 0;
   width: 0;
   height: 0;
-  border: 11px solid #A20B0B;
+  border: 11px solid #ffa501;
   border-left-color: transparent;
   background: transparent;
   border-top-color: transparent;
@@ -1583,7 +1581,7 @@ span.post-date i {
 }
 
 .cnt-info ul.address li i {
-  color: #A20B0B;
+  color: #cd2122;
   margin-right: 15px;
 }
 .cnt-info ul.social li a {
@@ -1593,7 +1591,7 @@ span.post-date i {
 }
 
 .cnt-info ul.social li a:hover {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 #google-map {
@@ -1639,7 +1637,7 @@ span.post-date i {
 }
 
 .crumb-content h4 span {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 .crumb-title {
@@ -1659,7 +1657,7 @@ span.post-date i {
   top: 25px;
   height: 2px;
   width: 50px;
-  background: #A20B0B;
+  background: #cd2122;
 }
 
 .view-more {
@@ -1675,7 +1673,7 @@ span.post-date i {
 }
 
 .view-more a:hover {
-  color: #A20B0B;
+  color: #fea402;
 }
 
 .view-more a span {
@@ -1779,7 +1777,7 @@ span.post-date i {
 }
 
 .cs-post-share .tags ul li a:hover {
-  background: #A20B0B;
+  background: #ffc502;
   color: #222 !important;
 }
 
@@ -1808,7 +1806,7 @@ span.post-date i {
 }
 
 .cs-social li a:hover {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 .cs-post-author {
@@ -1824,7 +1822,7 @@ span.post-date i {
 }
 
 .cs-post-author span {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 .cs-comments {
@@ -1887,7 +1885,7 @@ span.post-date i {
 }
 
 .post-author-info .social li a:hover {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 /*comment area*/
@@ -1994,7 +1992,7 @@ h4.comment-title {
 
 .leave-comment-area form input:focus,
 .leave-comment-area form textarea:focus {
-  border-color: #A20B0B;
+  border-color: #cd2122;
 }
 
 .leave-comment-area form textarea {
@@ -2084,7 +2082,7 @@ h4.comment-title {
   font-family: "Rubik", sans-serif;
   color: #fff;
   font-size: 12px;
-  background: #A20B0B;
+  background: #cd2122;
   padding: 5px 25px;
 }
 .w-cs-single {
@@ -2105,7 +2103,7 @@ h4.comment-title {
   font-weight: 700;
 }
 .w-cs-single p a:hover {
-  color: #A20B0B;
+  color: #cd2122;
 }
 .w-cs-single span {
   font-size: 12px;
@@ -2134,7 +2132,7 @@ h4.comment-title {
   border-radius: 33px;
   letter-spacing: 0;
   border: none;
-  background: #A20B0B;
+  background: #cd2122;
   color: #fff;
   outline: none;
   -webkit-transition: all 0.3s ease 0s;
@@ -2162,7 +2160,7 @@ h4.comment-title {
 }
 
 .widget-tags li a:hover {
-  background: #A20B0B;
+  background: #ffc502;
   color: #222 !important;
 }
 
@@ -2193,8 +2191,8 @@ h4.comment-title {
   right: -10px;
   bottom: -10px;
   border: none;
-  border-right: 5px solid #A20B0B;
-  border-bottom: 5px solid #A20B0B;
+  border-right: 5px solid #cd2122;
+  border-bottom: 5px solid #cd2122;
   height: 86%;
   width: 100%;
 }
@@ -2223,7 +2221,7 @@ h4.comment-title {
 }
 
 .befr-themeoclor.teacher-area:before {
-  background: #A20B0B;
+  background: #cd2122;
 }
 
 /*============================================
@@ -2247,7 +2245,7 @@ h4.comment-title {
   height: 50%;
   width: 100%;
   z-index: -1;
-  background: #A20B0B;
+  background: #cd2122;
 }
 
 .contact-info .cnt-info {
@@ -2283,7 +2281,7 @@ h4.comment-title {
 .cnt-addres-single .icon {
   float: left;
   margin-right: 15px;
-  color: #A20B0B;
+  color: #cd2122;
   font-size: 48px;
 }
 
@@ -2317,7 +2315,7 @@ h4.comment-title {
 
 .contact-form form input:focus,
 .contact-form form textarea:focus {
-  border-bottom: 1px solid #A20B0B;
+  border-bottom: 1px solid #cd2122;
 }
 
 .contact-form form textarea {
@@ -2329,7 +2327,7 @@ h4.comment-title {
   height: 48px;
   width: 193px;
   color: #fff;
-  background: #A20B0B;
+  background: #cd2122;
   letter-spacing: 0;
   font-weight: 700;
   text-transform: uppercase;
@@ -2370,17 +2368,17 @@ h4.comment-title {
 
 .blog-top-meta ul li span {
   letter-spacing: 0;
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 .blog-top-meta ul li i {
-  color: #A20B0B;
+  color: #cd2122;
   margin-right: 10px;
   font-size: 18px;
 }
 
 .blog-meta i {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 /*widget-search*/
@@ -2398,7 +2396,7 @@ h4.comment-title {
 }
 
 .widget-search form button {
-  color: #A20B0B;
+  color: #cd2122;
   position: absolute;
   right: 0;
   top: 0;
@@ -2415,7 +2413,7 @@ h4.comment-title {
 }
 
 .widget-search form button:hover {
-  background: #A20B0B;
+  background: #ffc502;
   color: #fff;
 }
 
@@ -2432,7 +2430,7 @@ h4.comment-title {
 }
 
 .widget-category .list li a:hover {
-  color: #A20B0B;
+  color: #cd2122;
 }
 
 .widget-category .list li a:before {
@@ -2467,7 +2465,7 @@ h4.comment-title {
   font-size: 48px;
   font-weight: 900;
   text-transform: uppercase;
-  color: #A20B0B;
+  color: #cd2122;
   letter-spacing: 0;
   margin-bottom: 25px;
 }
@@ -2494,5 +2492,3 @@ h4.comment-title {
   margin-right: 8px;
   width: auto;
 }
-
-.owl-carousel,.owl-carousel .owl-item{-webkit-tap-highlight-color:transparent;position:relative}.owl-carousel{display:none;width:100%;z-index:1}.owl-carousel .owl-stage{position:relative;-ms-touch-action:pan-Y;-moz-backface-visibility:hidden}.owl-carousel .owl-stage:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0}.owl-carousel .owl-stage-outer{position:relative;overflow:hidden;-webkit-transform:translate3d(0,0,0)}.owl-carousel .owl-item,.owl-carousel .owl-wrapper{-webkit-backface-visibility:hidden;-moz-backface-visibility:hidden;-ms-backface-visibility:hidden;-webkit-transform:translate3d(0,0,0);-moz-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0)}.owl-carousel .owl-item{min-height:1px;float:left;-webkit-backface-visibility:hidden;-webkit-touch-callout:none}.owl-carousel .owl-item img{display:block;width:100%}.owl-carousel .owl-dots.disabled,.owl-carousel .owl-nav.disabled{display:none}.no-js .owl-carousel,.owl-carousel.owl-loaded{display:block}.owl-carousel .owl-dot,.owl-carousel .owl-nav .owl-next,.owl-carousel .owl-nav .owl-prev{cursor:pointer;cursor:hand;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.owl-carousel.owl-loading{opacity:0;display:block}.owl-carousel.owl-hidden{opacity:0}.owl-carousel.owl-refresh .owl-item{visibility:hidden}.owl-carousel.owl-drag .owl-item{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.owl-carousel.owl-grab{cursor:move;cursor:grab}.owl-carousel.owl-rtl{direction:rtl}.owl-carousel.owl-rtl .owl-item{float:right}.owl-carousel .animated{animation-duration:1s;animation-fill-mode:both}.owl-carousel .owl-animated-in{z-index:0}.owl-carousel .owl-animated-out{z-index:1}.owl-carousel .fadeOut{animation-name:fadeOut}@keyframes fadeOut{0%{opacity:1}100%{opacity:0}}.owl-height{transition:height .5s ease-in-out}.owl-carousel .owl-item .owl-lazy{opacity:0;transition:opacity .4s ease}.owl-carousel .owl-item img.owl-lazy{transform-style:preserve-3d}.owl-carousel .owl-video-wrapper{position:relative;height:100%;background:#000}.owl-carousel .owl-video-play-icon{position:absolute;height:80px;width:80px;left:50%;top:50%;margin-left:-40px;margin-top:-40px;background:url(owl.video.play.png) no-repeat;cursor:pointer;z-index:1;-webkit-backface-visibility:hidden;transition:transform .1s ease}.owl-carousel .owl-video-play-icon:hover{-ms-transform:scale(1.3,1.3);transform:scale(1.3,1.3)}.owl-carousel .owl-video-playing .owl-video-play-icon,.owl-carousel .owl-video-playing .owl-video-tn{display:none}.owl-carousel .owl-video-tn{opacity:0;height:100%;background-position:center center;background-repeat:no-repeat;background-size:contain;transition:opacity .4s ease}.owl-carousel .owl-video-frame{position:relative;z-index:1;height:100%;width:100%}
