--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -117,7 +117,7 @@ a:visited {
 
 a:hover,
 a:active {
-    color: #A20B0B;
+    color: #ffb607;
     text-decoration: none;
     outline: 0;
 }
@@ -134,7 +134,7 @@ p a:visited {
 }
 
 a.active {
-    color: #A20B0B;
+    color: #ffb607;
 }
 
 
