--- a/src/app/Shared/nav-bar/nav-bar.component.html
+++ b/src/app/Shared/nav-bar/nav-bar.component.html
@@ -23,13 +23,13 @@
                                     </ul>
                                 </li>
                                 <li><a href="about.html">About</a></li>
-                                <li><a href="javascript:void(0);">Courses</a>
+                                <li><a href="javascript:void(0);">university</a>
                                     <ul class="submenu">
                                         <li><a href="./courses.html">courses</a></li>
                                         <li><a href="course-details.html">course details</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="javascript:void(0);">teacher</a>
+                                <li><a href="javascript:void(0);">Application</a>
                                     <ul class="submenu">
                                         <li><a href="teachers.html">teachers</a></li>
                                         <li><a href="teacher-details.html">teacher details</a></li>
