--- a/src/app/Shared/nav-bar/nav-bar.component.html
+++ b/src/app/Shared/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
                     <div class="main-menu menu-style2">
                         <nav>
                             <ul id="m_menu_active">
-                                <li class="active"><a href="javascript:void(0);">Home</a>
+                                <li class="active"><a href="javascript:void(0);">acceuil</a>
                                     <ul class="submenu">
                                         <li class="active"><a href="index.html">Home One</a></li>
                                         <li><a href="index2.html">Home Two</a></li>
