--- a/src/app/Shared/nav-bar/nav-bar.component.html
+++ b/src/app/Shared/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
                     <div class="main-menu menu-style2">
                         <nav>
                             <ul id="m_menu_active">
-                                <li class="active"><a href="javascript:void(0);">acceuil</a>
+                                <li class="active"><a href="javascript:void(0);">Home</a>
                                     <ul class="submenu">
                                         <li class="active"><a href="index.html">Home One</a></li>
                                         <li><a href="index2.html">Home Two</a></li>
@@ -47,7 +47,12 @@
                                         <li><a href="blog-details.html">blog details</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="./contact.html">Contact</a></li>
+                              <li><a href="javascript:void(0);">Agency</a>
+                                <ul class="submenu">
+                                  <li><a class="nav-link" routerLink="/blog">AgencyOffers</a></li>
+                                  <li><a class="nav-link" routerLink="/blog">AgencyReservation</a></li>
+                                </ul>
+                              </li>
                             </ul>
                         </nav>
                     </div>
@@ -59,7 +64,7 @@
                             <li><a data-toggle="modal" data-target="#exampleModal2"  class="btn btn-primary btn-round" href="#">Sign Up</a></li>
                         </ul>
                     </div>
-                    <!-- Button trigger modal -->  
+                    <!-- Button trigger modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                       <div class="modal-dialog" role="document">
                         <div class="modal-content p-5">
@@ -70,17 +75,17 @@
                             </button>
                           </div>
                           <div class="modal-body">
-                            <form> 
+                            <form>
                                 <input type="email" placeholder="Enter Your Email.." required="">
                                 <input type="password" placeholder="Enter Your Paddword">
-                                <label class="checkbox-inline mr-5"><input type="checkbox" value="">Remember Me</label> 
+                                <label class="checkbox-inline mr-5"><input type="checkbox" value="">Remember Me</label>
                                 <a class="primary-color" href="#"><u>Forgot password</u></a>
                                 <input class="btn btn-primary btn-sm" type="submit" value="Login">
-                            </form> 
-                          </div> 
+                            </form>
+                          </div>
                         </div>
                       </div>
-                    </div> 
+                    </div>
 
                     <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                       <div class="modal-dialog" role="document">
@@ -91,7 +96,7 @@
                               <span aria-hidden="true">&times;</span>
                             </button>
                           </div>
-                          <div class="modal-body"> 
+                          <div class="modal-body">
                             <form class="signup-form text-center">
                                 <div class="row">
                                     <div class="col-lg-6">
@@ -103,10 +108,10 @@
                                 </div>
                                 <input type="email" placeholder="Enter Your Email.." required="">
                                 <input type="password" placeholder="Enter Your Password">
-                                <label class="checkbox-inline"><input type="checkbox" value="">I Agree</label> 
+                                <label class="checkbox-inline"><input type="checkbox" value="">I Agree</label>
                                 <input class="btn btn-primary btn-sm" type="submit" value="Register Now">
-                            </form> 
-                          </div> 
+                            </form>
+                          </div>
                         </div>
                       </div>
                     </div>
